--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,14 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    // Retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+
+
+// JSON Parsing
+    compile 'com.google.code.gson:gson:2.6.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
     // RecyclerView
     compile 'com.android.support:recyclerview-v7:23.3.+'
 
